@@ -1,0 +1,15 @@
+#include <objc/objc.h>
+#include <objc/objc-api.h>
+#include <objc/Object.h>
+
+@interface MyObject
+{
+  short s;
+  char c;
+}
+@end
+
+@implementation MyObject
+@end
+
+#include "bf-common.h"
