@@ -1,3 +1,7 @@
+2000-04-12  Jakub Jelinek  <jakub@redhat.com>
+
+	* objc/execute/bf-20.m: New test.
+
 2000-04-10  Richard Henderson  <rth@cygnus.com>
 
 	* gcc.c-torture/execute/20000412-1.c: Reduce some more.
